fixed the links in dark mode

--- a/projct_sunrise/style.css
+++ b/projct_sunrise/style.css
@@ -12,6 +12,9 @@
     color: #000000;
     text-decoration: underline;
 }
+.dark-mode-link {
+    color: #eff6ff;;
+}
 .center {
     margin: auto;
     margin: auto;
